# swagger-output.json
@@ -1,6 +1,6 @@
 {
     "info": {
-        "version": "1.0.1327+1676379551231",
+        "version": "1.0.1345+1676394054961",
         "title": "Space Data Server",
         "description": "MVP Space Data Service based on the data standards at: <a href=\"https://SpaceDataStandards.org\">SpaceDataStandards.org</a>, version 0.0.2+1675110065585"
     },
@@ -292,6 +292,36 @@
                         }
                     }
                 }
+            }
+        },
+        "/echo/{standard}": {
+            "post": {
+                "description": "Accepts a flatbuffer as a POST body, returns a JSON representation.  For debugging.",
+                "parameters": [
+                    {
+                        "name": "standard",
+                        "description": "Three Letter Identifier for <a href='SpaceDataStandards.org'>SpaceDataStandards.org</a> standard.",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "$ref": "#/definitions/STANDARDS"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "in": "body",
+                    "content": {
+                        "application/octet-stream": {
+                            "schema": {
+                                "type": "string",
+                                "format": "binary"
+                            }
+                        }
+                    }
+                },
+                "responses": {}
             }
         }
     },
